--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header></header>
     <main>
-      <div>
+      <h1>Roman Numeral Converter</h1>
+      <div class="container">
         <input type="number" id="number" placeholder="Enter a number" />
         <button id="convert-btn">Convert</button>
       </div>
